--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
   <!-- Include js -->
   <script type="text/javascript" src="js/script.js"></script>
+  <script src="anime.min.js"></script>
+  <!-- End including js -->
 
 </head>
 <body>
