--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Include js -->
   <script type="text/javascript" src="js/script.js"></script>
-  <script src="anime.min.js"></script>
+  <script src="js/anime.min.js"></script>
   <!-- End including js -->
 
 </head>
